# modelone

./: .gitignore  Cargo.toml  README.md
modelone/: Cargo.toml  deepenum.rs  deepenums.txt  design.txt  expanded.rs  language.txt  newobjectformat.rs
modelone/src/: change_box.rs  change_option.rs  change_string.rs  change_value.rs  change_vec.rs  graph.rs  history.rs  idalloc.rs  lib.rs  model.rs  object.rs  object2.rs
test1/: Cargo.toml
test1/src/: main.rs
uilang/: Cargo.toml  design.rs
uilang/src/: lib.rs
uilang/uilang_impl/: Cargo.toml
uilang/uilang_impl/src/: ast.rs  ir.rs  lib.rs
uilang_test/: Cargo.toml
uilang_test/src/: main.rs
uione/: Cargo.toml
uione/shaders/: image.glsl  rect_150.glsl  text.glsl
uione/src/: anchors.rs  animation.rs  basicitems.rs  cast_slice.rs  colour.rs  font_resource.rs  geometry.rs  gl_wrapper.rs  image_data.rs  item.rs  item_graphics_pipeline.rs  item_graphics_pipeline_gfx.rs  lib.rs  mainloop_gfx.rs  mainloop_gl_glutin.rs  rect.rs  resources.rs  scenegraph.rs  shader.rs  shadervalue.rs  texture_resource.rs  vec2.rs
uione/src/basicitems/: image.rs  rectangle.rs  text.rs
