[package]
name = "uione"
version = "0.1.0"
authors = ["Joshua Worth <kemblesoft@gmail.com>"]
edition = "2018"

[dependencies]
modelone = {path = "../modelone", version = "*"}

num = "0.1.37"
time = "0.1.42"
cgmath = "0.17.0"
bitflags = "1.0.4"
gl = "0.10.0"
glutin = "0.26.0"
rusttype = {version = "0.5.2", features = ["gpu_cache"]}
font-loader = "0.7.0"
lazy_static = "1.2.0"

[dependencies.winit]
version = "0.24.0"
default-features = false
features = ["x11"]